- Add a fixed width font for printing. Configurability via GUI will have to wait until after KDE 3.4. - In the custom font case make the fixed width font used for viewing default to KDE's standard fixed width font instead of to KDE's standard non-fixed font. - Use the new fixed width font for printing if the user enabled the Use Fixed Font option.

In the custom font case we use the fixed width font the user selected (later the fixed fonts used for viewing and printing will be configurable separately). In the non-custom font case we use KDE's standard fixed width font.
BUG:56302

svn path=/trunk/kdepim/; revision=387570